s/(#[[:space:]]*include[[:space:]]+["<])bin\.h/\1bnetwork.h/g
        rename bselect.h and bin.h public headers to be more declaratively named [7.25]
s/db5_enc_len[(.*)]/DB5_ENC_LEN(\1)/g
	replaced db5_enc_len[] global array with DB5_ENC_LEN() macro [7.25]
s/db_normalize/bu_normalize/g
	move the path normalization routine to libbu [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])bot\.h/\1rt\/primitives\/bot.h/g
	consolidate bot header contents [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])anim\.h/\1bn\/anim.h/g
	consolidate anim header contents [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])plot3\.h/\1bn.h/g
	plot3 implementation is in libbn, move header and replace plot3.h with bn.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])vectfont\.h/#define LAST -128\n\1bn\/vectfont.h/g
	consolidate vectfont.h files [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])spm\.h/\1bn\/spm.h/g
	move spm.h into bn subheader directory [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])dvec\.h/\1bn\/dvec.h/g
s/(#[[:space:]]*include[[:space:]]+["<])vector_fpu\.h/\1bn\/vector_fpu.h/g
s/(#[[:space:]]*include[[:space:]]+["<])vector_x86\.h/\1bn\/vector_x86.h/g
	move dvec.h and friends into bn subheader directory [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])db\.h/\1rt\/db4.h/g
	move db.h to rt/db4.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])db5\.h/\1rt\/db5.h/g
	move db5.h to rt/db5.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])mater\.h/\1raytrace.h/g
	merge mater.h with rt/mater.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])nurb\.h/#include "raytrace.h"\n\1rt\/nurb.h/g
	move nurb.h to rt/nurb.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])rtfunc\.h/#include "raytrace.h"\n\1rt\/func.h/g
	move rtfunc.h to rt/func.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])tol\.h/#include "bn.h"\n#include "raytrace.h"\n\1rt\/tol.h/g
	consolidate tol.h and rt/tol.h [7.25]
s/(#[[:space:]]*include[[:space:]]+["<])tie\.h/\1rt\/tie.h/g
	move tie.h to rt/tie.h [7.25]